[package]
name = "xml_client"
version = "0.1.0"
authors = ["Niko Haß <48032410+nikohass@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_sdk = { path = "../game_sdk"}
player = { path = "../player" }
argparse = "0.2.2"
xml-rs = "0.7"
